--- a/scss/_quick-link.scss
+++ b/scss/_quick-link.scss
@@ -301,7 +301,7 @@
         }
 
         .image-thumb {
-            display: flex;
+            // display: flex;
             flex-flow: column;
             font-size: 0;
             flex: 1;
@@ -436,7 +436,7 @@
                 font-weight: 900;
                 font-size: 2.4rem;
                 display: block;
-                word-break: break-word;
+                word-wrap: break-word;
                 line-height: 1;
             }
 
